common-applications/control/prometheus/openeuler-ecs-cn-north4/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - prometheus'
  name: openeuler-ecs-beijing4-prometheus-ingress
spec:
  tls:
    - hosts:
        - openeuler-ecs-beijing4-prometheus.osinfra.cn
      secretName: openeuler-ecs-beijing4-prometheus-tls
  rules:
    - host: openeuler-ecs-beijing4-prometheus.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: openeuler-prometheus-ecs-internal
              servicePort: 80
            path: /
